Read from dataset
Adds read from data set capability to read_images_encrypt.c

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ sequential/encrypted_image.png
 sequential/input_image.png
 sequential/massive_encrypted_image.png
 sequential/PNGdecrypted_image.png
+/sequential/data
