FIX: Creating a new folder for RSA images
Without this you would enter a recursive loop when reading the new images

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,8 @@ sequential/input_image.png
 sequential/massive_encrypted_image.png
 sequential/PNGdecrypted_image.png
 /sequential/data
+/parallel/data
+/parallel/encrypted
+/parallel/decrypted
+/sequential/encrypted
+/sequential/decrypted
