--- a/cuda/CMakeLists.txt
+++ b/cuda/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.28)
 project(Parallel_RSA VERSION 1.0.0)
 
+# Specify to compile in C++ 17
+set(CMAKE_CXX_STANDARD 17)
+
+# Specify to build in a Release configuration
+set(CMAKE_BUILD_TYPE Release)
+
 enable_language(CUDA)
 
 include_directories(header lib)
